--- a/style/button.css
+++ b/style/button.css
@@ -2,8 +2,16 @@
     background-color: teal;
     color: white;
     border: none;
+    padding: 10px;
 }
 
+.form__button:hover {
+    background-color: rgba(0, 128, 128, 0.779);
+}
+
+.form__button:active {
+    background-color: rgba(0, 128, 128, 0.393);
+}
 
 
 .tasksListButton {
@@ -18,6 +26,22 @@
     background-color: teal;
 }
 
+.tasksListButton--toogle:hover {
+    background-color: rgba(0, 128, 128, 0.779);
+}
+
+.tasksListButton--toogle:active {
+    background-color: rgba(0, 128, 128, 0.393);
+}
+
 .tasksListButton--reomve {
     background-color: crimson;
+}
+
+.tasksListButton--reomve:hover {
+    background-color: rgba(220, 20, 60, 0.719);
+}
+
+.tasksListButton--reomve:active {
+    background-color: rgba(220, 20, 60, 0.504);
 }
