--- a/style/style.css
+++ b/style/style.css
@@ -37,10 +37,17 @@ html {
     grid-gap: 20px;
 }
 
+@media(max-width:767px){
+    .form {
+        grid-template-columns: 1fr;
+    }
+}
+
 .newTask {
     padding: 10px;
     border: 1px solid #ddd;
 }
+
 
 
 .tasksList {
