--- a/style/tasks.css
+++ b/style/tasks.css
@@ -15,3 +15,19 @@
 .taskDone {
     text-decoration: line-through;
 }
+
+.stats {
+    background-color: rgb(152, 192, 207);
+    display: grid;
+    grid-gap: 2px;
+    grid-template-columns: 100px 100px;
+    align-content: center;
+    justify-content: space-between;
+    padding: 10px;
+    color:#fff;
+    margin:20px;
+}
+
+.stats__item {
+    text-align: end;
+}
